cmake_minimum_required(VERSION 3.10.2)
project(matrix_hprof_analyzer)

set(CMAKE_CXX_STANDARD 17)

add_executable(matrix_hprof_analyzer_parser_test mock/mock_engine.cpp engine.cpp parser.cpp)
target_link_libraries(matrix_hprof_analyzer_parser_test matrix_hprof_analyzer_parser)
target_link_libraries(matrix_hprof_analyzer_parser_test gtest_main gmock gmock_main)
target_link_libraries(matrix_hprof_analyzer_parser_test test_tools)

gtest_discover_tests(matrix_hprof_analyzer_parser_test)