cmake_minimum_required(VERSION 3.10.2)
project(hprof_analyzer)

set(CMAKE_CXX_STANDARD 17)

add_executable(hprof_analyzer_reader_test reader.cpp)
target_link_libraries(hprof_analyzer_reader_test hprof_analyzer_reader)
target_link_libraries(hprof_analyzer_reader_test gtest_main)

gtest_discover_tests(hprof_analyzer_reader_test)